<resources>
    <string name="app_name">Demo App</string>
    <string name="input_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_password">Remember password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="kannada">Kannada</string>
    <string name="hello_welcome_to_android_learning">Hello welcome to android learning</string>
    <string name="profilepicdisplay">ProfilePicDisplay</string>
    <string name="alarm">Alarm</string>
    <string name="whatsapp_share">Whatsapp share</string>
    <string name="set">Set</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="enter_phone_number">Enter Phone number</string>
</resources>