<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_langlist"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical"
    android:background="#def">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/lang_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radbutEng"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radbutHin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/hindi"/>
        <RadioButton
            android:id="@+id/radbutKan"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/kannada"/>

    </RadioGroup>

    </ScrollView>


    <TextView
        android:id="@+id/setlangbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set"
        android:onClick="langselectHandler"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/cancellangbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:onClick="langselectHandler"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="end"/>

</LinearLayout>
